# SAITEC-Safeguard-Harness

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/datasets/: sample_eval.yaml
configs/pipelines/: experiment_v1.yaml  final-prod.yaml  final.yaml  model_interfaces_v1.yaml  prod_v1.yaml  qwen3_6_27b_lora_qwen3guard_conflict_review_candidate_v102_weighted_rules.yaml  qwen3_6_27b_lora_qwen3guard_conflict_review_candidate_v103_weighted_signals.yaml  s5_side_constrained_ensemble_v1.yaml  single_intent_classifier_v1.yaml  single_multimodal_probe_v1.yaml  single_policy_classifier_v1.yaml  single_progressive_rules_v1.yaml  single_refusal_probe_v1.yaml
configs/prompts/: qwen_binary_intent_v8.txt  qwen_binary_policy_v8.txt  refusal_probe_v1.txt  safety_prompt_v1.txt
configs/providers/: classifier_head_api.yaml  local_classifier_head.yaml  local_qwen3_5_4b_generation.yaml  local_qwen3_5_4b_prompt_binary.yaml  local_qwen3_6_27b_generation.yaml  local_qwen3_6_27b_lora_sft_prompt_binary.yaml  local_qwen3_6_27b_prompt_binary.yaml  local_qwen3_6_vl_prompt_binary.yaml  local_qwen3guard_gen8b_refusal_probe_veto_safe.yaml  mock.yaml  mock_classifier_head.yaml  mock_prompt_binary.yaml  prompt_binary_api.yaml
data/examples/: example_s5_labeled.jsonl  hard_augmented_s5.jsonl  hard_augmented_s5_v2.jsonl  hard_augmented_s5_v3.jsonl  sample_eval.jsonl  (+11 more)
dictionaries/: high_risk_terms.yaml  review_terms.yaml
models/: README.md
tests/: test_core.py  test_datasets.py  test_evaluation_cli.py  test_methods.py  test_model_methods_config.py  test_pipeline.py  test_providers.py
(+34 files in other folders)
